updated react URL and fixed h-scroll on mobile view home page

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -54,7 +54,7 @@
     list-style-type: disc;
     .featurePosition(translate(-50%, -50%));
     text-shadow:0px 5px 15px #ffffff,0px -5px 15px #ffffff,5px 0px 15px #ffffff,-5px 0px 15px #ffffff;
-    font-size: 2rem;
+    font-size: 1.5rem;
     line-height: 2;
     width: 60%;
 
@@ -66,6 +66,7 @@
         font-size: 2.8rem;
         line-height: 2.8; 
     }
+
 }
 
 .call-to-action {
