--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,9 +16,9 @@
 }
 
 .backgroundImageStyling {
-        width: 30%;
+        width: 40%;
         padding: 5% 2%;
-        margin: 40px 20px;
+        margin: 40px 0px;
         border-radius: 10px;
         background-size: cover;
         opacity: .9;
